proc: uid: Adds accounting for the cputimes per uid.
Adds proc files /proc/uid_cputime/show_uid_stat and
/proc/uid_cputime/remove_uid_range.

show_uid_stat lists the total utime and stime for the active as well as
terminated processes for each of the uids.

Writing a range of uids to remove_uid_range will delete the accounting
for all the uids within that range.

Conflicts:
	drivers/misc/Kconfig
	drivers/misc/Makefile

Change-Id: Ie1ee76caea7ef4f343fd37e0ffa00556ec85eb3a

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -588,6 +588,12 @@ config TIMA_LOG
 	help
 	  This option enables support for dumping TIMA log.
 
+config UID_CPUTIME
+	tristate "Per-UID cpu time statistics"
+	default n
+	help
+	  Per UID based cpu time statistics exported to /proc/uid_cputime
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
