--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -590,7 +590,7 @@ config TIMA_LOG
 
 config UID_CPUTIME
 	tristate "Per-UID cpu time statistics"
-	default n
+	depends on PROFILING
 	help
 	  Per UID based cpu time statistics exported to /proc/uid_cputime
 
