v1awifi add new Epen v1 firmware
Edit the makefile for the new file

Change-Id: I4ac715448f68d3f56aabe3d5d48906349550d46b

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -148,7 +148,7 @@ endif
 fw-shipped-$(CONFIG_EPEN_WACOM_G9PM) += epen/W9001_B887.bin epen/W9001_B911.bin
 ifeq ("$(CONFIG_EPEN_WACOM_G9PLL)", "y")
 fw-shipped-$(CONFIG_N1A) += epen/W9007A_LT03.bin
-fw-shipped-$(CONFIG_V1A) += epen/W9007A_V1.bin
+fw-shipped-$(CONFIG_V1A) += epen/W9007A_V1_450.bin
 fw-shipped-$(CONFIG_CHAGALL) += epen/W9007A_V1.bin
 endif
 fw-shipped-$(CONFIG_EPEN_WACOM_G10PM) += epen/W9010_HA_B934.bin epen/W9010_HA_B968.bin
