--- a/drivers/battery/Kconfig
+++ b/drivers/battery/Kconfig
@@ -7,6 +7,17 @@ config BATTERY_SAMSUNG
 	 To see battery-related functions,
 	 refer to sec_charging_common.h
 
+config BATTERY_SWELLING
+	bool "prevent battery swellin "
+	default n
+	help
+	  Say Y to include support for prevent battery swelling
+
+config SW_SELF_DISCHARGING
+	bool "enable sw_self_discharging"
+	default n
+	help
+	  Say Y to enable CONFIG_SW_SELF_DISCHARGING
 
 # Fuel Gauge
 
@@ -222,3 +233,9 @@ config BATT_TEMP_TMO
        help
         Say Y to include support for chagall lte tmo model
 	This value defined device
+
+config STORE_MODE
+	bool "enable store mode"
+	default n
+	help
+	  Say Y to enable CONFIG_STORE_MODE
