[TEMP] selinux: enforce permissive
Allows to control the SELinux-system through the arch-defconfigs.
This commit adds the possibility to force "Enforced" or "Permissive"
as SELinux-status as setting both of them as default and let the
user decide.

Another addition is the "Predend Enforced"-flag which
will always return "Enforced" as the current SELinux-state, required
for proper SafetyNet-support.

Change-Id: If2f0ce06aede830db9ede42f6e4ec6bb30f7091a

--- a/security/selinux/Makefile
+++ b/security/selinux/Makefile
@@ -2,10 +2,24 @@
 # Makefile for building the SELinux module as part of the kernel tree.
 #
 
-ifeq ($(SEC_BUILD_OPTION_PRODUCT_SHIP), true)
-ifeq ($(SEC_BUILD_OPTION_SELINUX_ENFORCE),true)
-EXTRA_CFLAGS += -DCONFIG_ALWAYS_ENFORCE=true
+ifeq ($(CONFIG_SECURITY_SELINUX_DEFAULT_PERMISSIVE),y)
+EXTRA_CFLAGS += -DSELINUX_DEFAULT_PERMISSIVE=true
 endif
+
+ifeq ($(CONFIG_SECURITY_SELINUX_ALWAYS_PERMISSIVE),y)
+EXTRA_CFLAGS += -DSELINUX_ALWAYS_PERMISSIVE=true
+endif
+
+ifeq ($(CONFIG_SECURITY_SELINUX_DEFAULT_ENFORCE),y)
+EXTRA_CFLAGS += -DSELINUX_DEFAULT_ENFORCE=true
+endif
+
+ifeq ($(CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCE),y)
+EXTRA_CFLAGS += -DSELINUX_ALWAYS_ENFORCE=true
+endif
+
+ifeq ($(CONFIG_SECURITY_SELINUX_PRETEND_ENFORCE),y)
+EXTRA_CFLAGS += -DSELINUX_PRETEND_ENFORCE=true
 endif
 
 obj-$(CONFIG_SECURITY_SELINUX) := selinux.o
