--- a/arch/arm/configs/lineageos_v1a3g_defconfig
+++ b/arch/arm/configs/lineageos_v1a3g_defconfig
@@ -3579,6 +3579,11 @@ CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
+# CONFIG_SECURITY_SELINUX_DEFAULT_ENFORCE is not set
+# CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCE is not set
+CONFIG_SECURITY_SELINUX_DEFAULT_PERMISSIVE=y
+# CONFIG_SECURITY_SELINUX_ALWAYS_PERMISSIVE is not set
+# CONFIG_SECURITY_SELINUX_PRETEND_ENFORCE is not set
 # CONFIG_SEC_SELINUX is not set
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
