--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -112,7 +112,8 @@ menu "DOS/FAT/NT Filesystems"
 
 source "fs/fat/Kconfig"
 source "fs/ntfs/Kconfig"
-
+source "fs/sdfat/Kconfig"
+ 
 endmenu
 endif # BLOCK
 
