--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -8,6 +8,7 @@ menu "File systems"
 config DCACHE_WORD_ACCESS
        bool
 
+# klaatu@sec
 config LOW_ORDER_SEQ_MALLOC
 	bool "Let seq_file allocation only low order page memory"
 	default y
@@ -111,6 +112,7 @@ if BLOCK
 menu "DOS/FAT/NT Filesystems"
 
 source "fs/fat/Kconfig"
+source "fs/exfat/Kconfig"
 source "fs/ntfs/Kconfig"
 source "fs/sdfat/Kconfig"
  
@@ -208,6 +210,7 @@ if MISC_FILESYSTEMS
 source "fs/adfs/Kconfig"
 source "fs/affs/Kconfig"
 source "fs/ecryptfs/Kconfig"
+source "fs/scfs/Kconfig"
 source "fs/sdcardfs/Kconfig"
 source "fs/hfs/Kconfig"
 source "fs/hfsplus/Kconfig"
@@ -235,7 +238,6 @@ source "fs/pstore/Kconfig"
 source "fs/sysv/Kconfig"
 source "fs/ufs/Kconfig"
 source "fs/exofs/Kconfig"
-source "fs/f2fs/Kconfig"
 
 endif # MISC_FILESYSTEMS
 
