--- a/arch/arm/configs/lineageos_chagallwifi_defconfig
+++ b/arch/arm/configs/lineageos_chagallwifi_defconfig
@@ -804,7 +804,7 @@ CONFIG_NET=y
 #
 CONFIG_PACKET=y
 CONFIG_UNIX=y
-# CONFIG_UNIX_DIAG is not set
+CONFIG_UNIX_DIAG=y
 CONFIG_XFRM=y
 CONFIG_XFRM_USER=y
 # CONFIG_XFRM_SUB_POLICY is not set
@@ -837,7 +837,7 @@ CONFIG_INET_XFRM_MODE_BEET=y
 # CONFIG_INET_LRO is not set
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
-# CONFIG_INET_UDP_DIAG is not set
+CONFIG_INET_UDP_DIAG=y
 # CONFIG_TCP_CONG_ADVANCED is not set
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
