Regen all Exynos5420 defconfigs
Change-Id: Ie06da0b1b3ff418eadf97e3c92b2a67482e5fef6

--- a/arch/arm/configs/lineageos_chagallltetmo_defconfig
+++ b/arch/arm/configs/lineageos_chagallltetmo_defconfig
@@ -574,6 +574,8 @@ CONFIG_SWP_EMULATE=y
 # CONFIG_CPU_ICACHE_DISABLE is not set
 # CONFIG_CPU_DCACHE_DISABLE is not set
 # CONFIG_CPU_BPREDICT_DISABLE is not set
+CONFIG_CPU_SPECTRE=y
+CONFIG_HARDEN_BRANCH_PREDICTOR=y
 # CONFIG_CACHE_L2X0 is not set
 CONFIG_ARM_L1_CACHE_SHIFT_6=y
 CONFIG_ARM_L1_CACHE_SHIFT=6
@@ -833,6 +835,7 @@ CONFIG_INET_XFRM_MODE_BEET=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 CONFIG_INET_UDP_DIAG=y
+# CONFIG_INET_DIAG_DESTROY is not set
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
@@ -3286,6 +3289,7 @@ CONFIG_F2FS_FS_XATTR=y
 # CONFIG_F2FS_FS_POSIX_ACL is not set
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
+# CONFIG_F2FS_FAULT_INJECTION is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
@@ -3315,11 +3319,11 @@ CONFIG_GENERIC_ACL=y
 #
 # CONFIG_MSDOS_FS is not set
 # CONFIG_VFAT_FS is not set
+CONFIG_EXFAT_FS=y
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
 CONFIG_SDFAT_FS=y
-CONFIG_SDFAT_USE_FOR_EXFAT=y
 CONFIG_SDFAT_USE_FOR_VFAT=y
 CONFIG_SDFAT_DELAYED_META_DIRTY=y
 CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
@@ -3356,6 +3360,10 @@ CONFIG_MISC_FILESYSTEMS=y
 CONFIG_ECRYPT_FS=y
 CONFIG_WTL_ENCRYPTION_FILTER=y
 # CONFIG_ECRYPT_FS_VIRTUAL_FAT_XATTR is not set
+# CONFIG_SCFS is not set
+# CONFIG_SYSTEM_COMPRESSED is not set
+# CONFIG_SCFS_LOWER_PAGECACHE_INVALIDATION is not set
+# CONFIG_SCFS_USE_CRYPTO is not set
 CONFIG_SDCARD_FS=y
 # CONFIG_SDCARD_FS_FADV_NOACTIVE is not set
 # CONFIG_HFS_FS is not set
