--- a/arch/arm/configs/lineageos_v1awifi_defconfig
+++ b/arch/arm/configs/lineageos_v1awifi_defconfig
@@ -3118,7 +3118,7 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_IPC_32BIT=y
-CONFIG_ANDROID_BINDER_DEVICES="binder"
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_PERSISTENT_RAM=y
