Update lineageos defconfigs
Just re-save after 'make menuconfig' now that some commits have been cherry-picked.

Change-Id: I308d75c41940837bb8644ee512370f56b1376a4c

--- a/arch/arm/configs/lineageos_n1awifi_defconfig
+++ b/arch/arm/configs/lineageos_n1awifi_defconfig
@@ -573,6 +573,8 @@ CONFIG_SWP_EMULATE=y
 # CONFIG_CPU_ICACHE_DISABLE is not set
 # CONFIG_CPU_DCACHE_DISABLE is not set
 # CONFIG_CPU_BPREDICT_DISABLE is not set
+CONFIG_CPU_SPECTRE=y
+CONFIG_HARDEN_BRANCH_PREDICTOR=y
 # CONFIG_CACHE_L2X0 is not set
 CONFIG_ARM_L1_CACHE_SHIFT_6=y
 CONFIG_ARM_L1_CACHE_SHIFT=6
@@ -832,6 +834,7 @@ CONFIG_INET_XFRM_MODE_BEET=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 CONFIG_INET_UDP_DIAG=y
+# CONFIG_INET_DIAG_DESTROY is not set
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
@@ -917,6 +920,7 @@ CONFIG_NF_CONNTRACK_SANE=y
 CONFIG_NF_CONNTRACK_TFTP=y
 CONFIG_NF_CT_NETLINK=y
 # CONFIG_NF_CT_NETLINK_TIMEOUT is not set
+# CONFIG_NETFILTER_TPROXY is not set
 CONFIG_NETFILTER_XTABLES=y
 
 #
@@ -1010,6 +1014,7 @@ CONFIG_IP_NF_MATCH_ECN=y
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
+# CONFIG_IP_NF_TARGET_REJECT_SKERR is not set
 # CONFIG_IP_NF_TARGET_ULOG is not set
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_NEEDED=y
@@ -1056,6 +1061,7 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_TARGET_HL is not set
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
+# CONFIG_IP6_NF_TARGET_REJECT_SKERR is not set
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
 # CONFIG_IP6_NF_SECURITY is not set
@@ -3229,6 +3235,7 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
+# CONFIG_F2FS_FAULT_INJECTION is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
@@ -3236,7 +3243,12 @@ CONFIG_FSNOTIFY=y
 CONFIG_INOTIFY_USER=y
 # CONFIG_FANOTIFY is not set
 CONFIG_QUOTA=y
-# CONFIG_QUOTACTL is not set
+# CONFIG_QUOTA_NETLINK_INTERFACE is not set
+CONFIG_PRINT_QUOTA_WARNING=y
+# CONFIG_QUOTA_DEBUG is not set
+# CONFIG_QFMT_V1 is not set
+# CONFIG_QFMT_V2 is not set
+CONFIG_QUOTACTL=y
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
@@ -3258,11 +3270,11 @@ CONFIG_GENERIC_ACL=y
 #
 # CONFIG_MSDOS_FS is not set
 # CONFIG_VFAT_FS is not set
+CONFIG_EXFAT_FS=y
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
 CONFIG_SDFAT_FS=y
-CONFIG_SDFAT_USE_FOR_EXFAT=y
 CONFIG_SDFAT_USE_FOR_VFAT=y
 CONFIG_SDFAT_DELAYED_META_DIRTY=y
 CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
@@ -3279,6 +3291,7 @@ CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
 # CONFIG_SDFAT_DBG_WARNON is not set
 CONFIG_SDFAT_STATISTICS=y
+CONFIG_SDFAT_UEVENT=y
 
 #
 # Pseudo filesystems
@@ -3299,6 +3312,10 @@ CONFIG_MISC_FILESYSTEMS=y
 CONFIG_ECRYPT_FS=y
 CONFIG_WTL_ENCRYPTION_FILTER=y
 # CONFIG_ECRYPT_FS_VIRTUAL_FAT_XATTR is not set
+# CONFIG_SCFS is not set
+# CONFIG_SYSTEM_COMPRESSED is not set
+# CONFIG_SCFS_LOWER_PAGECACHE_INVALIDATION is not set
+# CONFIG_SCFS_USE_CRYPTO is not set
 CONFIG_SDCARD_FS=y
 # CONFIG_SDCARD_FS_FADV_NOACTIVE is not set
 # CONFIG_HFS_FS is not set
@@ -3487,6 +3504,7 @@ CONFIG_DYNAMIC_DEBUG=y
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
 # CONFIG_TEST_KSTRTOX is not set
+# CONFIG_TEST_HASH is not set
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_ARM_UNWIND is not set
 CONFIG_DEBUG_USER=y
