ARM: configs: lineageos_*: Regenerate defconfigs
Change-Id: Icd321178f5c6fb941b38f2f3e2630cbbe131e3a4

--- a/arch/arm/configs/lineageos_v1awifi_defconfig
+++ b/arch/arm/configs/lineageos_v1awifi_defconfig
@@ -2599,18 +2599,15 @@ CONFIG_SND_SOC_ARIZONA=y
 CONFIG_SND_SOC_WM_ADSP=y
 CONFIG_SND_SOC_WM5102=y
 # CONFIG_SOUND_PRIME is not set
-CONFIG_HID_SUPPORT=y
+
+#
+# HID support
+#
 CONFIG_HID=y
 # CONFIG_HID_BATTERY_STRENGTH is not set
 CONFIG_HIDRAW=y
 CONFIG_UHID=y
-
-#
-# USB Input Devices
-#
-CONFIG_USB_HID=y
-# CONFIG_HID_PID is not set
-# CONFIG_USB_HIDDEV is not set
+CONFIG_HID_GENERIC=y
 
 #
 # Special HID drivers
@@ -2682,7 +2679,14 @@ CONFIG_HID_ZAGG=y
 CONFIG_HID_ZEROPLUS=y
 # CONFIG_ZEROPLUS_FF is not set
 CONFIG_HID_ZYDACRON=y
-# CONFIG_HID_OVR is not set
+# CONFIG_HID_OVR is not set/
+
+#
+# USB HID support
+#
+CONFIG_USB_HID=y
+# CONFIG_HID_PID is not set
+# CONFIG_USB_HIDDEV is not set
 CONFIG_USB_ARCH_HAS_OHCI=y
 CONFIG_USB_ARCH_HAS_EHCI=y
 CONFIG_USB_ARCH_HAS_XHCI=y
